--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
         <item>Fat Loss</item>
         <item>Muscle Gain</item>
     </string-array>
+    <string name="title_feedback">Feedback</string>
 </resources>
